# simdrng

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  index.md  links.json  readme.md  simdrng.hpp  tmp
.github/consumer/: CMakeLists.txt  consume.cpp
.github/godbolt/: demo_scalar.cpp  demo_simd.cpp
.github/scripts/: godbolt_links.py  install-deps.sh
.github/single-header/: smoke_scalar.cpp  smoke_simd.cpp
.github/workflows/: benchmarks.yml  ci.yml  codspeed.yml  docs.yml  fortran.yml  godbolt-links.yml  install.yml  js.yml  julia.yml  matlab.yml  octave.yml  pre-commit.yml  single-header.yml  tsan.yml  valgrind.yml  wheels.yml
bindings/fortran/: CMakeLists.txt  simdrng.f90  test_simdrng.f90
bindings/js/: .gitignore  CMakeLists.txt  package-lock.json  package.json  tsconfig.json
bindings/js/src/: backend.ts  index.ts  native.ts  simdrng_napi.cpp  wasm.ts  wasm_glue.cpp  win_delay_load_hook.cc
bindings/js/test/: simdrng.test.mjs
bindings/julia/: CMakeLists.txt
bindings/matlab/: .gitattributes  CMakeLists.txt  simdrng.m  simdrng.mw  test_simdrng.m
bindings/matlab/octave_compat/: matrix.h
cmake/: CompilerOptions.cmake  GenerateVersion.cmake  dev_helpers.cmake  simdrngConfig.cmake.in
devel/: xoshiro_coeffs.py
docs/: CMakeLists.txt  Doxyfile.in  api_cpp.rst  api_python.rst  benchmarks.rst  conf.py  examples.rst  index.rst  install.rst  references.rst  requirements.txt
docs/guides/: chacha.rst  philox.rst  splitmix.rst  xoshiro.rst
examples/cpp/: CMakeLists.txt  basic_xoshiro.cpp  philox_counter_based.cpp  simd_bulk_fill.cpp  threaded_openmp.cpp  xoshiro_native.cpp
examples/python/: benchmark_vs_numpy.py  quickstart.py  scipy_integration.py
include/random/: chacha.hpp  chacha_simd.hpp  dispatch_arch.hpp  macros.hpp  philox.hpp  philox_simd.hpp  xoshiro_scalar.hpp  xoshiro_simd.hpp
include/simdrng/: capi.h  chacha.hpp  chacha_simd.hpp  dispatch_arch.hpp  macros.hpp  philox.hpp  philox_simd.hpp  simdrng.hpp  splitmix.hpp  version.hpp  version.hpp.in  xoshiro.hpp  xoshiro_scalar.hpp  xoshiro_simd.hpp
python/: CMakeLists.txt  pyproject.toml  pyrandom.cpp  simdrng.cpp
python/pyrandom/: __init__.py
python/pyrandom/benchmarks/: numpy_generators.py
python/pyrandom/examples/: basic.py  chacha.py  global_generator.py  scipy_sparse.py  scipy_stats.py  simd.py  splitmix_numpy.py  splitmix_scipy.py  state_serialization.py  xoshiro_numpy.py  xoshiro_scipy.py  xoshirosimd_numpy.py  xoshirosimd_scipy.py
python/pyrandom/tests/: test_pyrandom.py
python/simdrng/: __init__.py
python/simdrng/benchmarks/: numpy_generators.py
python/simdrng/examples/: basic.py  chacha.py  global_generator.py  scipy_sparse.py  scipy_stats.py  simd.py  splitmix_numpy.py  splitmix_scipy.py  state_serialization.py  xoshiro_numpy.py  xoshiro_scipy.py  xoshirosimd_numpy.py  xoshirosimd_scipy.py
python/simdrng/tests/: test_simdrng.py
results/clang-19/: 20260417T214759Z.json  20260417T214832Z.json  20260417T215502Z.json  20260430T162522Z.json  20260430T165825Z.json  20260610T152802Z.json  20260610T161432Z.json  20260610T170219Z.json  20260610T171734Z.json  20260610T174108Z.json  20260610T184610Z.json  20260610T185041Z.json  20260610T185229Z.json  20260610T200620Z.json  20260610T211820Z.json  20260612T160028Z.json  20260612T160150Z.json  20260612T165138Z.json  20260612T172956Z.json  20260612T194132Z.json  20260612T195535Z.json  20260612T195558Z.json  20260721T164834Z.json  20260721T171424Z.json  20260721T180311Z.json  20260721T181147Z.json  20260721T185037Z.json  20260721T201128Z.json  20260721T201336Z.json  20260721T205030Z.json  20260722T152541Z.json  20260722T153352Z.json  20260722T155128Z.json  20260722T164804Z.json  cpu_model.txt
results/clang-20/: 20260417T214759Z.json  20260417T214832Z.json  20260417T215502Z.json  20260430T162522Z.json  20260430T165825Z.json  20260610T152802Z.json  20260610T161432Z.json  20260610T170219Z.json  20260610T171734Z.json  20260610T174108Z.json  20260610T184610Z.json  20260610T185041Z.json  20260610T185229Z.json  20260610T200620Z.json  20260610T211820Z.json  20260612T160028Z.json  20260612T160150Z.json  20260612T165138Z.json  20260612T172956Z.json  20260612T194132Z.json  20260612T195535Z.json  20260612T195558Z.json  20260721T164834Z.json  20260721T171424Z.json  20260721T180311Z.json  20260721T181147Z.json  20260721T185037Z.json  20260721T201128Z.json  20260721T201336Z.json  20260721T205030Z.json  20260722T152541Z.json  20260722T153352Z.json  20260722T155128Z.json  20260722T164804Z.json
results/gcc-14/: 20260417T214759Z.json  20260417T214832Z.json  20260417T215502Z.json  20260430T162522Z.json  20260430T165825Z.json  20260610T152802Z.json  20260610T161432Z.json  20260610T170219Z.json  20260610T171734Z.json  20260610T174108Z.json  20260610T184610Z.json  20260610T185041Z.json  20260610T185229Z.json  20260610T200620Z.json  20260610T211820Z.json  20260612T160028Z.json  20260612T160150Z.json  20260612T165138Z.json  20260612T172956Z.json  20260612T194132Z.json  20260612T195535Z.json  20260612T195558Z.json  20260721T164834Z.json  20260721T171424Z.json  20260721T180311Z.json  20260721T181147Z.json  20260721T185037Z.json  20260721T201128Z.json  20260721T201336Z.json  20260721T205030Z.json  20260722T152541Z.json  20260722T153352Z.json  20260722T155128Z.json  20260722T164804Z.json  cpu_model.txt
results/gcc-15/: 20260417T214759Z.json  20260417T214832Z.json  20260417T215502Z.json  20260430T162522Z.json  20260430T165825Z.json  20260610T152802Z.json  (+28 more)
scripts/: analyze_bench.py  bench_all.sh  generate_charts.py
src/: capi.cpp  chacha_simd_dispatch.cpp  philox_simd_dispatch.cpp  xoshiro_simd.cpp  xoshiro_simd_dispatch.cpp
tests/: CMakeLists.txt  benchmarks.cpp  splitmix_tests.cpp  test_bulk_api.cpp  test_capi.cpp  test_chacha.cpp  test_chacha_simd.cpp  test_philox.cpp  test_philox_simd.cpp  test_thread_safety.cpp  test_xoshiro.cpp  test_xoshiro_simd.cpp
tools/: amalgamate.py  asm_audit.py  clang-format-staged.py  gersemi-staged.py
(+5 files in other folders)
